ChangeLog for RQL
=================

--
    * enhance bad rql query detection with ordered distinct (can't use distinct
      if an attribute is selected and we sort on another attribute)

    * add constraint package to dependencies  so we've fallback opportunity if
      gecode is not installed

2010-08-02  --  0.26.5
    * fix solutions computation crash with some query using sub-queries (closes #37423)



2010-07-28  --  0.26.4
    * fix re-annotation pb: some stinfo keys were not properly reinitialized
      which may cause pb later (at sql generation time for instance)



2010-06-21  --  0.26.3
    * support for node from having in Select.remove

    * enhanced Select.replace method

    * rql st checker now checks function avaibility according to backend (if specified)



2010-06-11  --  0.26.2
    * totally remove 'IS' operator

    * replace get_variable_variables by get_variable_indicies

    * fix rule order so 'HAVING (X op Y)' is now parseable while 'HAVING (1+2) op Y' isn't anymore parseable

    * fix simplification bug with ored uid relations



2010-06-04  --  0.26.1
    * normalize NOT() to NOT EXISTS() when it makes sense

    * fix grammar bug in HAVING clause: should all arbitrary expression and fix to deal with IN() hack



2010-04-20  --  0.26.0
    * setuptools support

    * variable and column alias stinfo optimization

    * analyzer return key used in args to unambiguify solutions

    * rewrite_shared_optional refactoring



2010-03-16  --  0.25.0
    * depends on logilab-database

    * raise BadRQLQuery when using optional on attribute relation



2010-02-10  --  0.24.0
    * update to yams 0.27 api

    * fully dropped mx support

    * various bugs fixed



2009-08-26  --  0.23.0
    * Union.locate_subquery now return a 2-uple (select subquery, column index in the subquery)

    * new subquery_selection_index method on Union

    * new root_selection_index method on VariableRef



2009-08-18  --  0.22.2